--- a/app/modules/posts/components/PostTeaser/styles.scss
+++ b/app/modules/posts/components/PostTeaser/styles.scss
@@ -23,7 +23,13 @@
   }
 
   @include el(image-thumbnail) {
-    float: left;
-    margin-right: 10px;
+    display: block;
+    margin: 0 auto 10px;
+    max-width: 100%;
+
+    @include breakpoint(desktop) {
+      float: left;
+      margin: 0 10px 0 0;
+    }
   }
 }
